--- a/backends/remote/build.gradle
+++ b/backends/remote/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     implementation("org.apache.commons:commons-lang3:${apacheCommonsLang3Version}")
 
     //gRPC
+    implementation 'javax.annotation:javax.annotation-api:1.3.2'
     implementation "com.google.api.grpc:proto-google-common-protos:2.54.1"
     implementation "io.grpc:grpc-services:${grpcVersion}"
     implementation "io.grpc:grpc-protobuf:${grpcVersion}"
