--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,7 @@ buildscript {
         classpath("org.owasp:dependency-check-gradle:12.1.8")
         classpath("org.bouncycastle:bc-fips:${bcFipsVersion}")
         classpath("org.bouncycastle:bcpkix-fips:${bcpkixFipsVersion}")
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:$springBootVersion")
     }
 }
 
