--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -14,7 +14,8 @@ updates:
     update-types: [ "version-update:semver-major" ] # We need to stay with protobuf-java & protoc 3.25.x as the latest grpc still depends on protobuf-java & protoc 3.25.x https://github.com/grpc/grpc-java/issues/11015
   - dependency-name: "com.google.protobuf:protobuf-java"
     update-types: [ "version-update:semver-major" ] # We need to stay with protobuf-java & protoc 3.25.x as the latest grpc still depends on protobuf-java & protoc 3.25.x https://github.com/grpc/grpc-java/issues/11015
-
+  - dependency-name: "org.springframework.boot:*"
+    update-types: [ "version-update:semver-major" ] # for now stay on the more stable v3, which will be supported until June 2026: https://spring.io/projects/spring-boot#support)
 
 - package-ecosystem: "github-actions"
   directory: "/"
